# pretty-powerpoint

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: README.md  cd-dev.yml  cd-prod.yml  cd-staging.yml  ci.yml  security.yml
config/: __init__.py  settings.py
docs/: phase-1-1-detailed-tasks.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md
docs/development/: pre-commit-guide.md
docs/operations/: README.md
infrastructure/docker/: docker-compose.yml
infrastructure/docker/lambda/: Dockerfile
infrastructure/terraform/: terraform.tf
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/application/handlers/: __init__.py
src/application/services/: __init__.py
src/core/: __init__.py
src/core/entities/: __init__.py
src/core/interfaces/: __init__.py  repository.py
src/core/use_cases/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/aws/: __init__.py
src/infrastructure/external_services/: __init__.py
src/infrastructure/persistence/: __init__.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py
tests/: __init__.py
tests/ci/: __init__.py  test_workflows.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
